[gd_scene load_steps=2 format=2]

[ext_resource path="res://actor_framework/Flash.gd" type="Script" id=1]

[node name="Flash" type="Node2D"]
script = ExtResource( 1 )

[node name="Duration" type="Timer" parent="."]

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.08
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
